# spotify-lirics

./: .env  README.md  pyproject.toml  requirements.txt  spotify_lyrics.py
